<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/navigation_item_my_filters"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/nav_item_my_filters" />
        <item
            android:id="@+id/navigation_item_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_item_favourites" />
        <item
            android:id="@+id/navigation_item_open_filter"
            android:icon="@drawable/ic_attachment"
            android:title="@string/nav_item_new_filter" />
    </group>
</menu>